Adjust adapter_code_size to account for -Xlog:methodhandles in debug builds

XMLWordPrintable

    • b21
    • x86_64
    • windows

      The following tests failed in the JDK16 CI:

      runtime/logging/TestMethodHandlesVerbose.java
      runtime/logging/RedefineClasses.java

      Here's snippets from the hs_err_pid file:

      # Internal Error (t:\workspace\open\src\hotspot\share\asm/codeBuffer.hpp:184), pid=1512212, tid=148840
      # assert(allocates2(pc)) failed: not in CodeBuffer memory: 0x0000021435ae1520 <= 0x0000021435ae2c91 <= 0x0000021435ae2c90
      #
      # JRE version: (16.0+21) (fastdebug build )
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 16-ea+21-1157, mixed mode, sharing, tiered, z gc, windows-amd64)

      --------------- T H R E A D ---------------

      Current thread (0x0000021424f36670): JavaThread "Unknown thread" [_thread_in_vm, id=148840, stack(0x000000ca5de00000,0x000000ca5df00000)]

      Stack: [0x000000ca5de00000,0x000000ca5df00000]
      Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [jvm.dll+0xaf0e21] os::platform_print_native_stack+0xf1 (os_windows_x86.cpp:236)
      V [jvm.dll+0xd1f586] VMError::report+0xfc6 (vmError.cpp:731)
      V [jvm.dll+0xd20f6e] VMError::report_and_die+0x7de (vmError.cpp:1548)
      V [jvm.dll+0xd21624] VMError::report_and_die+0x64 (vmError.cpp:1341)
      V [jvm.dll+0x4c8bf7] report_vm_error+0x117 (debug.cpp:267)
      V [jvm.dll+0x113912] CodeSection::set_end+0x62 (codeBuffer.hpp:184)
      V [jvm.dll+0x2626a3] Assembler::mov_literal64+0xd3 (assembler_x86.cpp:9987)
      V [jvm.dll+0x9dbd60] MacroAssembler::stop+0x130 (macroAssembler_x86.cpp:821)
      V [jvm.dll+0xa89b81] MethodHandles::verify_klass+0x561 (methodHandles_x86.cpp:95)
      V [jvm.dll+0xa88901] MethodHandles::load_klass_from_Class+0x31 (methodHandles_x86.cpp:56)
      V [jvm.dll+0xa86973] MethodHandles::generate_method_handle_dispatch+0x9b3 (methodHandles_x86.cpp:448)
      V [jvm.dll+0xa878a3] MethodHandles::generate_method_handle_interpreter_entry+0x753 (methodHandles_x86.cpp:291)
      V [jvm.dll+0xa82ca0] MethodHandles::generate_adapters+0x180 (methodHandles.cpp:91)
      V [jvm.dll+0x681877] init_globals+0xc7 (init.cpp:159)
      V [jvm.dll+0xca6371] Threads::create_vm+0x621 (thread.cpp:3731)
      V [jvm.dll+0x75e7c2] JNI_CreateJavaVM_inner+0xb2 (jni.cpp:3764)
      V [jvm.dll+0x76163f] JNI_CreateJavaVM+0x1f (jni.cpp:3847)
      C [jli.dll+0x53ef] JavaMain+0x113 (java.c:416)
      C [ucrtbase.dll+0x21ffa]
      C [KERNEL32.DLL+0x17974]
      C [ntdll.dll+0x6a271]

            Assignee:
            Claes Redestad
            Reporter:
            Daniel Daugherty
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: