8255038: Adjust adapter_code_size to account for -Xlog:methodhandles in debug builds

Reviewed-by: shade, neliasso